Removed overflow for app bcs bug on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
-*{
-  padding:0;
-  margin:0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.App{
+.App {
   /* background-color:red; */
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
-  overflow: hidden;
-  background-position-y:80px ;
-  padding:0;
+  /* overflow: hidden; */
+  background-position-y: 80px;
+  padding: 0;
   height: 100vh;
   width: 100vw;
 }
